Details
-
Bug
-
Resolution: Fixed
-
Minor
-
None
-
3
-
9223372036854775807
Description
found by smatch, in ofd_inconsistency_verification_main:
spin_unlock(&ofd->ofd_inconsistency_lock); if (rc != 0) RETURN(rc); OBD_ALLOC_PTR(lr); if (unlikely(lr == NULL)) GOTO(out, rc = -ENOMEM); ... thread_set_flags(thread, SVC_STOPPED); wake_up_all(&thread->t_ctl_waitq); spin_unlock(&ofd->ofd_inconsistency_lock);
Landed for 2.8