LU-6516 ofd: double unlock of spinlock

double spin unlock in ofd_inconsistency_verification_main
Fixed by adding spin_lock in new lable out1

Signed-off-by: Ulka Vaze <ulka.vaze@yahoo.in>
Change-Id: If9838d75b9bf6936b99c9d92e8ff0c9b36d783c3
Signed-off-by: Ulka Vaze <ulka.vaze@yahoo.in>